// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlertTriggerBlock > renders correctly CHECKLIST type 1`] = `
<div
  data-v-app=""
>
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="CHECKLIST"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object]"
    groupsorderby="ordering"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="true"
    placeholder=""
    prependtext="Checklist name:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prependtext="Result:"
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <evocon-v-button-stub
    class="ma-1 ml-2"
    color=""
    disabled="false"
    icon=""
    iconcolor=""
    size="small"
    text="Reset"
    textclass=""
    type="secondary"
  />
  
</div>
`;

exports[`AlertTriggerBlock > renders correctly STOPREASON type when count is 1 and duration is 0 1`] = `
<div
  data-v-app=""
>
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="STOPREASON"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object],[object Object]"
    groupsorderby="ordering"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="true"
    placeholder=""
    prependtext="Stops:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="primaryName"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prependtext="Machine locations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="ADDED"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  <!--v-if-->
  
  <!--v-if-->
  <!--v-if-->
  <evocon-v-button-stub
    class="ma-1 ml-2"
    color=""
    disabled="true"
    icon=""
    iconcolor=""
    size="small"
    text="Reset"
    textclass=""
    type="secondary"
  />
  
</div>
`;

exports[`AlertTriggerBlock > renders correctly STOPREASON type when count is bigger than 2 and duration is 0 1`] = `
<div
  data-v-app=""
>
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="STOPREASON"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object],[object Object]"
    groupsorderby="ordering"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="true"
    placeholder=""
    prependtext="Stops:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="primaryName"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prependtext="Machine locations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="REPEATS"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  <div
    class="d-flex align-center"
  >
    <evocon-number-input-stub
      allowfloat="false"
      allownegative="false"
      class="ma-1"
      error="false"
      grow="true"
      maxvalue="999999999999999"
      modelvalue="3"
      suffix="times"
      usechip="true"
    />
    <!--v-if-->
    <div
      class="ml-1 d-flex align-center"
    >
      <span
        class="text-body-medium"
      >
        in a shift
      </span>
      <icon-with-tooltip-stub
        additionalclasses="ml-2"
        color=""
        icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        iconid=""
        iconsrc=""
        size="16"
        tooltiplocation="top"
        tooltiptext="Another alert will follow if this threshold is reached."
      />
    </div>
  </div>
  
  <!--v-if-->
  <!--v-if-->
  <evocon-v-button-stub
    class="ma-1 ml-2"
    color=""
    disabled="true"
    icon=""
    iconcolor=""
    size="small"
    text="Reset"
    textclass=""
    type="secondary"
  />
  
</div>
`;

exports[`AlertTriggerBlock > renders correctly STOPREASON type when duration is 3600 1`] = `
<div
  data-v-app=""
>
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="STOPREASON"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object],[object Object]"
    groupsorderby="ordering"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="true"
    placeholder=""
    prependtext="Stops:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="primaryName"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prependtext="Machine locations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="EXCEEDS"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  
  <evocon-duration-chip-stub
    class="ma-1"
    error="false"
    maxhours="99"
    modelvalue="3600"
  />
  <!--v-if-->
  
  <!--v-if-->
  
  <!--v-if-->
  <!--v-if-->
  <evocon-v-button-stub
    class="ma-1 ml-2"
    color=""
    disabled="true"
    icon=""
    iconcolor=""
    size="small"
    text="Reset"
    textclass=""
    type="secondary"
  />
  
</div>
`;

exports[`AlertTriggerBlock > renders correctly STOPREASON type when duration is null 1`] = `
<div
  data-v-app=""
>
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="STOPREASON"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object],[object Object]"
    groupsorderby="ordering"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="true"
    placeholder=""
    prependtext="Stops:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="primaryName"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prependtext="Machine locations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="EXCEEDS"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  
  <evocon-duration-chip-stub
    class="ma-1"
    error="false"
    maxhours="99"
  />
  <!--v-if-->
  
  <!--v-if-->
  
  <!--v-if-->
  <!--v-if-->
  <evocon-v-button-stub
    class="ma-1 ml-2"
    color=""
    disabled="true"
    icon=""
    iconcolor=""
    size="small"
    text="Reset"
    textclass=""
    type="secondary"
  />
  
</div>
`;

exports[`AlertTriggerBlock > renders correctly STOPREASON type with duration error 1`] = `
<div
  data-v-app=""
>
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="STOPREASON"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object],[object Object]"
    groupsorderby="ordering"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="true"
    placeholder=""
    prependtext="Stops:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="primaryName"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prependtext="Machine locations:"
    removenonexistentselections="true"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="EXCEEDS"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  
  <evocon-duration-chip-stub
    class="ma-1"
    error="true"
    maxhours="99"
    modelvalue="60"
  />
  <span
    class="ml-1 text-body-small text-error"
  >
    At least {value} min
  </span>
  
  <!--v-if-->
  
  <!--v-if-->
  <!--v-if-->
  <evocon-v-button-stub
    class="ma-1 ml-2"
    color=""
    disabled="false"
    icon=""
    iconcolor=""
    size="small"
    text="Reset"
    textclass=""
    type="secondary"
  />
  
</div>
`;

exports[`AlertTriggerBlock > renders correctly if type is null and checklists are enabled 1`] = `
<div
  data-v-app=""
>
  
  <div>
    
    <evocon-v-chip-stub
      active="false"
      allowgrow="false"
      class="ma-1"
      disabled="false"
      error="false"
      icon=""
      iconclass=""
      imgsrc=""
      label="Downtime"
      type="neutral"
    />
    <evocon-v-chip-stub
      active="false"
      allowgrow="false"
      class="ma-1"
      disabled="false"
      error="false"
      icon=""
      iconclass=""
      imgsrc=""
      label="Scrap"
      type="neutral"
    />
    <evocon-v-chip-stub
      active="false"
      allowgrow="false"
      class="ma-1"
      disabled="false"
      error="false"
      icon=""
      iconclass=""
      imgsrc=""
      label="Changeover"
      type="neutral"
    />
    <evocon-v-chip-stub
      active="false"
      allowgrow="false"
      class="ma-1"
      disabled="false"
      error="false"
      icon=""
      iconclass=""
      imgsrc=""
      label="Checklists"
      type="neutral"
    />
    
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
</div>
`;
